# MCP-Airflow-API

./: .gitignore  Dockerfile  Dockerfile.smithery.ai  README.md  build-mcp-server-docker-image.sh  build-mcpo-server-docker-image.sh  docker-compose.yml  pyproject.toml  smithery.yaml
.github/workflows/: pypi-publish.yml
src/mcp_airflow_api/: airflow_api.py  mcp_main.py
